force-app/main/default/objects/custom_create225__c/custom_create225__c.object-meta.xml
<CustomObject>
    <label>Custom created object225</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects225</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>