force-app/main/default/objects/custom_create225__c/fields/custom_create_225field592__c.field-meta.xml
<CustomField>
    <fullName>custom_create_225field592__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 225field592</label>
    <type>Checkbox</type>
</CustomField>